--- a/style.css
+++ b/style.css
@@ -43,16 +43,17 @@ body{
 }
 .weather icon{
     width: 170px;
-    margin-top: 30px;
+    margin-top: 25px;
 }
 .weather h1{
+    margin-top : -10px;
     font-size : 80px;
     font-weight : 500;
 }
 .weather h2{
     font-size : 45px;
     font-weight : 400;
-    margin-top: -10px;
+    margin-top: -15px;
 }
 .details{
     display: flex;
@@ -83,4 +84,7 @@ col img{
     font-size : 14px;
     margin-top : 10px;
     display :none;
+}
+col p{
+    margin : 2px 0;
 }
